Update AI agents docs

--- a/docs/introduction.mdx
+++ b/docs/introduction.mdx
@@ -13,7 +13,7 @@ description: 'A collection of AI-powered tools for [Prism](https://prism.echolab
 
 ## AI Integration
 
-All tools in this package are designed to work with [Prism](https://prism.echolabs.dev/getting-started/introduction.html), allowing you to:
+All tools in this package are designed to work with [Prism](https://prism.echolabs.dev/getting-started/introduction.html), following best practices for building effective AI agents as outlined in [Anthropic's research](https://www.anthropic.com/research/building-effective-agents). This integration allows you to:
 - Execute operations using natural language
 - Handle complex queries with AI assistance
 - Integrate AI capabilities into your Laravel applications
