--- a/docs/introduction.mdx
+++ b/docs/introduction.mdx
@@ -1,6 +1,6 @@
 ---
-title: 'Introduction'
-description: 'A collection of AI-powered tools for [Prism](https://prism.echolabs.dev/getting-started/introduction.html) and Laravel'
+title: "Introduction"
+description: "A collection of AI-powered tools for [Prism](https://prism.echolabs.dev/getting-started/introduction.html) and Laravel"
 ---
 
 ## Features
@@ -14,13 +14,14 @@ description: 'A collection of AI-powered tools for [Prism](https://prism.echolab
 ## AI Integration
 
 All tools in this package are designed to work with [Prism](https://prism.echolabs.dev/getting-started/introduction.html), following best practices for building effective AI agents as outlined in [Anthropic's research](https://www.anthropic.com/research/building-effective-agents). This integration allows you to:
+
 - Execute operations using natural language
 - Handle complex queries with AI assistance
 - Integrate AI capabilities into your Laravel applications
 - Chain multiple tools for complex workflows
 
-Learn more about different [tool calling patterns](/tool-calling) and best practices for using multiple tools together.
+Learn more about different [tool calling patterns](/docs/tool-calling) and best practices for using multiple tools together.
 
 ## Getting Started
 
-Check out our [installation guide](/installation) to get started, or explore the individual tool documentation for detailed usage examples.
+Check out our [installation guide](/docs/installation) to get started, or explore the individual tool documentation for detailed usage examples.
